src/mc/route/parser.output

state 0
	$accept: .parseroot $end 

	IDENT  shift 4
	.  error

	parseroot  goto 1
	route  goto 2
	node  goto 3

state 1
	$accept:  parseroot.$end 

	$end  accept
	.  error


state 2
	parseroot:  route.    (1)

	.  reduce 1 (src line 58)


state 3
	route:  node.'>' node 
	route:  node.'<' '>' node 
	route:  node.'>' transforms 
	route:  node.'>' route 

	'<'  shift 6
	'>'  shift 5
	.  error


state 4
	node:  IDENT.    (6)
	node:  IDENT.'/' IDENT 

	'/'  shift 7
	.  reduce 6 (src line 90)


state 5
	route:  node '>'.node 
	route:  node '>'.transforms 
	route:  node '>'.route 

	IDENT  shift 4
	'?'  shift 12
	'%'  shift 13
	'='  shift 14
	.  error

	route  goto 10
	node  goto 8
	transforms  goto 9
	transform  goto 11

state 6
	route:  node '<'.'>' node 

	'>'  shift 15
	.  error


state 7
	node:  IDENT '/'.IDENT 

	IDENT  shift 16
	.  error


state 8
	route:  node.'>' node 
	route:  node '>' node.    (2)
	route:  node.'<' '>' node 
	route:  node.'>' transforms 
	route:  node.'>' route 

	'<'  shift 6
	'>'  shift 5
	.  reduce 2 (src line 66)


state 9
	route:  node '>' transforms.    (4)

	.  reduce 4 (src line 77)


state 10
	route:  node '>' route.    (5)

	.  reduce 5 (src line 85)


state 11
	transforms:  transform.'>' route 
	transforms:  transform.'>' node 
	transforms:  transform.'>' transforms 

	'>'  shift 17
	.  error


state 12
	transform:  '?'.transform_filter 
	transform:  '?'.transform_filter '%' transform_edit 
	transform:  '?'.transform_filter '=' transform_replace 

	IDENT  shift 20
	'{'  shift 19
	.  error

	transform_filter  goto 18

state 13
	transform:  '%'.transform_edit 

	IDENT  shift 23
	'{'  shift 22
	.  error

	transform_edit  goto 21

state 14
	transform:  '='.transform_replace 

	IDENT  shift 26
	'{'  shift 25
	.  error

	transform_replace  goto 24

state 15
	route:  node '<' '>'.node 

	IDENT  shift 4
	.  error

	node  goto 27

state 16
	node:  IDENT '/' IDENT.    (7)

	.  reduce 7 (src line 94)


state 17
	transforms:  transform '>'.route 
	transforms:  transform '>'.node 
	transforms:  transform '>'.transforms 

	IDENT  shift 4
	'?'  shift 12
	'%'  shift 13
	'='  shift 14
	.  error

	route  goto 28
	node  goto 29
	transforms  goto 30
	transform  goto 11

state 18
	transform:  '?' transform_filter.    (11)
	transform:  '?' transform_filter.'%' transform_edit 
	transform:  '?' transform_filter.'=' transform_replace 

	'%'  shift 31
	'='  shift 32
	.  reduce 11 (src line 118)


state 19
	transform_filter:  '{'.expr '}' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 33

state 20
	transform_filter:  IDENT.'{' expr '}' 
	transform_filter:  IDENT.    (18)

	'{'  shift 45
	.  reduce 18 (src line 172)


state 21
	transform:  '%' transform_edit.    (12)

	.  reduce 12 (src line 125)


state 22
	transform_edit:  '{'.script '}' 

	IDENT  shift 51
	VAR  shift 49
	DEL  shift 50
	THIS  shift 52
	.  error

	script  goto 46
	dstexpr  goto 48
	stmt  goto 47

state 23
	transform_edit:  IDENT.'{' script '}' 

	'{'  shift 53
	.  error


state 24
	transform:  '=' transform_replace.    (13)

	.  reduce 13 (src line 132)


state 25
	transform_replace:  '{'.mapexprs '}' 
	transform_replace:  '{'.'}' 

	IDENT  shift 56
	'}'  shift 55
	.  error

	mapexprs  goto 54

state 26
	transform_replace:  IDENT.'{' mapexprs '}' 
	transform_replace:  IDENT.'{' '}' 
	transform_replace:  IDENT.    (23)

	'{'  shift 57
	.  reduce 23 (src line 208)


state 27
	route:  node '<' '>' node.    (3)

	.  reduce 3 (src line 71)


state 28
	transforms:  transform '>' route.    (8)

	.  reduce 8 (src line 99)


state 29
	route:  node.'>' node 
	route:  node.'<' '>' node 
	route:  node.'>' transforms 
	route:  node.'>' route 
	transforms:  transform '>' node.    (9)

	'<'  shift 6
	'>'  shift 5
	.  reduce 9 (src line 105)


state 30
	transforms:  transform '>' transforms.    (10)

	.  reduce 10 (src line 111)


state 31
	transform:  '?' transform_filter '%'.transform_edit 

	IDENT  shift 23
	'{'  shift 22
	.  error

	transform_edit  goto 58

state 32
	transform:  '?' transform_filter '='.transform_replace 

	IDENT  shift 26
	'{'  shift 25
	.  error

	transform_replace  goto 59

state 33
	transform_filter:  '{' expr.'}' 
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 76
	OR  shift 77
	EQ  shift 72
	NE  shift 73
	LE  shift 75
	GE  shift 74
	EXP  shift 63
	'?'  shift 62
	'%'  shift 71
	'}'  shift 60
	'['  shift 81
	'<'  shift 79
	'>'  shift 78
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'&'  shift 68
	'|'  shift 69
	'^'  shift 70
	'~'  shift 61
	'.'  shift 80
	.  error


state 34
	expr:  NUMBER.    (39)

	.  reduce 39 (src line 302)


state 35
	expr:  TRUE.    (40)

	.  reduce 40 (src line 309)


state 36
	expr:  FALSE.    (41)

	.  reduce 41 (src line 315)


state 37
	expr:  '{'.mapexprs '}' 

	IDENT  shift 56
	.  error

	mapexprs  goto 82

state 38
	expr:  '['.listexprs ']' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 84
	listexprs  goto 83

state 39
	expr:  IDENT.'(' listexprs ')' 
	expr:  IDENT.'(' ')' 
	varexpr:  IDENT.    (76)

	'('  shift 85
	.  reduce 76 (src line 532)


state 40
	expr:  STRING.    (46)

	.  reduce 46 (src line 347)


state 41
	expr:  '-'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 86

state 42
	expr:  '('.expr ')' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 87

state 43
	expr:  varexpr.    (51)

	.  reduce 51 (src line 375)


state 44
	expr:  '!'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 88

state 45
	transform_filter:  IDENT '{'.expr '}' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 89

state 46
	transform_edit:  '{' script.'}' 

	'}'  shift 90
	.  error


state 47
	script:  stmt.    (26)
	script:  stmt.script 

	IDENT  shift 51
	VAR  shift 49
	DEL  shift 50
	THIS  shift 52
	.  reduce 26 (src line 231)

	script  goto 91
	dstexpr  goto 48
	stmt  goto 47

state 48
	stmt:  dstexpr.'=' expr ';' 
	stmt:  dstexpr.AE expr ';' 
	stmt:  dstexpr.OE expr ';' 
	stmt:  dstexpr.XE expr ';' 
	stmt:  dstexpr.PE expr ';' 
	stmt:  dstexpr.ME expr ';' 
	stmt:  dstexpr.TE expr ';' 
	stmt:  dstexpr.DE expr ';' 
	stmt:  dstexpr.RE expr ';' 
	dstexpr:  dstexpr.'[' expr ']' 
	dstexpr:  dstexpr.'.' IDENT 

	PE  shift 96
	ME  shift 97
	TE  shift 98
	DE  shift 99
	RE  shift 100
	AE  shift 93
	OE  shift 94
	XE  shift 95
	'='  shift 92
	'['  shift 101
	'.'  shift 102
	.  error


state 49
	stmt:  VAR.IDENT ';' 

	IDENT  shift 103
	.  error


state 50
	stmt:  DEL.IDENT ';' 

	IDENT  shift 104
	.  error


state 51
	dstexpr:  IDENT.    (77)

	.  reduce 77 (src line 537)


state 52
	dstexpr:  THIS.    (78)

	.  reduce 78 (src line 543)


state 53
	transform_edit:  IDENT '{'.script '}' 

	IDENT  shift 51
	VAR  shift 49
	DEL  shift 50
	THIS  shift 52
	.  error

	script  goto 105
	dstexpr  goto 48
	stmt  goto 47

state 54
	transform_replace:  '{' mapexprs.'}' 

	'}'  shift 106
	.  error


state 55
	transform_replace:  '{' '}'.    (21)

	.  reduce 21 (src line 194)


state 56
	mapexprs:  IDENT.':' expr 
	mapexprs:  IDENT.':' expr ',' mapexprs 

	':'  shift 107
	.  error


state 57
	transform_replace:  IDENT '{'.mapexprs '}' 
	transform_replace:  IDENT '{'.'}' 

	IDENT  shift 56
	'}'  shift 109
	.  error

	mapexprs  goto 108

state 58
	transform:  '?' transform_filter '%' transform_edit.    (14)

	.  reduce 14 (src line 139)


state 59
	transform:  '?' transform_filter '=' transform_replace.    (15)

	.  reduce 15 (src line 148)


state 60
	transform_filter:  '{' expr '}'.    (16)

	.  reduce 16 (src line 158)


state 61
	expr:  expr '~'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 110

state 62
	expr:  expr '?'.expr ':' expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 111

state 63
	expr:  expr EXP.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 112

state 64
	expr:  expr '+'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 113

state 65
	expr:  expr '-'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 114

state 66
	expr:  expr '*'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 115

state 67
	expr:  expr '/'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 116

state 68
	expr:  expr '&'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 117

state 69
	expr:  expr '|'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 118

state 70
	expr:  expr '^'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 119

state 71
	expr:  expr '%'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 120

state 72
	expr:  expr EQ.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 121

state 73
	expr:  expr NE.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 122

state 74
	expr:  expr GE.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 123

state 75
	expr:  expr LE.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 124

state 76
	expr:  expr AND.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 125

state 77
	expr:  expr OR.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 126

state 78
	expr:  expr '>'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 127

state 79
	expr:  expr '<'.expr 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 128

state 80
	varexpr:  expr '.'.IDENT 

	IDENT  shift 129
	.  error


state 81
	varexpr:  expr '['.expr ']' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 130

state 82
	expr:  '{' mapexprs.'}' 

	'}'  shift 131
	.  error


state 83
	expr:  '[' listexprs.']' 

	']'  shift 132
	.  error


state 84
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	listexprs:  expr.    (72)
	listexprs:  expr.',' listexprs 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 76
	OR  shift 77
	EQ  shift 72
	NE  shift 73
	LE  shift 75
	GE  shift 74
	EXP  shift 63
	'?'  shift 62
	'%'  shift 71
	'['  shift 81
	'<'  shift 79
	'>'  shift 78
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'&'  shift 68
	'|'  shift 69
	'^'  shift 70
	'~'  shift 61
	'.'  shift 80
	','  shift 133
	.  reduce 72 (src line 506)


state 85
	expr:  IDENT '('.listexprs ')' 
	expr:  IDENT '('.')' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	')'  shift 135
	.  error

	varexpr  goto 43
	expr  goto 84
	listexprs  goto 134

state 86
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  '-' expr.    (49)
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 81
	'.'  shift 80
	.  reduce 49 (src line 365)


state 87
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  '(' expr.')' 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 76
	OR  shift 77
	EQ  shift 72
	NE  shift 73
	LE  shift 75
	GE  shift 74
	EXP  shift 63
	'?'  shift 62
	'%'  shift 71
	'['  shift 81
	'<'  shift 79
	'>'  shift 78
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'&'  shift 68
	'|'  shift 69
	'^'  shift 70
	'~'  shift 61
	'.'  shift 80
	')'  shift 136
	.  error


state 88
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  '!' expr.    (67)
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 81
	'.'  shift 80
	.  reduce 67 (src line 469)


state 89
	transform_filter:  IDENT '{' expr.'}' 
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 76
	OR  shift 77
	EQ  shift 72
	NE  shift 73
	LE  shift 75
	GE  shift 74
	EXP  shift 63
	'?'  shift 62
	'%'  shift 71
	'}'  shift 137
	'['  shift 81
	'<'  shift 79
	'>'  shift 78
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'&'  shift 68
	'|'  shift 69
	'^'  shift 70
	'~'  shift 61
	'.'  shift 80
	.  error


state 90
	transform_edit:  '{' script '}'.    (24)

	.  reduce 24 (src line 216)


state 91
	script:  stmt script.    (27)

	.  reduce 27 (src line 236)


state 92
	stmt:  dstexpr '='.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 138

state 93
	stmt:  dstexpr AE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 139

state 94
	stmt:  dstexpr OE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 140

state 95
	stmt:  dstexpr XE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 141

state 96
	stmt:  dstexpr PE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 142

state 97
	stmt:  dstexpr ME.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 143

state 98
	stmt:  dstexpr TE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 144

state 99
	stmt:  dstexpr DE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 145

state 100
	stmt:  dstexpr RE.expr ';' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 146

state 101
	dstexpr:  dstexpr '['.expr ']' 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 147

state 102
	dstexpr:  dstexpr '.'.IDENT 

	IDENT  shift 148
	.  error


state 103
	stmt:  VAR IDENT.';' 

	';'  shift 149
	.  error


state 104
	stmt:  DEL IDENT.';' 

	';'  shift 150
	.  error


state 105
	transform_edit:  IDENT '{' script.'}' 

	'}'  shift 151
	.  error


state 106
	transform_replace:  '{' mapexprs '}'.    (19)

	.  reduce 19 (src line 180)


state 107
	mapexprs:  IDENT ':'.expr 
	mapexprs:  IDENT ':'.expr ',' mapexprs 

	IDENT  shift 39
	NUMBER  shift 34
	STRING  shift 40
	TRUE  shift 35
	FALSE  shift 36
	'{'  shift 37
	'['  shift 38
	'-'  shift 41
	'!'  shift 44
	'('  shift 42
	.  error

	varexpr  goto 43
	expr  goto 152

state 108
	transform_replace:  IDENT '{' mapexprs.'}' 

	'}'  shift 153
	.  error


state 109
	transform_replace:  IDENT '{' '}'.    (22)

	.  reduce 22 (src line 201)


state 110
	expr:  expr.'~' expr 
	expr:  expr '~' expr.    (47)
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	EXP  shift 63
	'%'  shift 71
	'['  shift 81
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'.'  shift 80
	.  reduce 47 (src line 353)


state 111
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr '?' expr.':' expr 
	expr:  expr.EXP expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	AND  shift 76
	OR  shift 77
	EQ  shift 72
	NE  shift 73
	LE  shift 75
	GE  shift 74
	EXP  shift 63
	'?'  shift 62
	'%'  shift 71
	'['  shift 81
	'<'  shift 79
	'>'  shift 78
	':'  shift 154
	'+'  shift 64
	'-'  shift 65
	'*'  shift 66
	'/'  shift 67
	'&'  shift 68
	'|'  shift 69
	'^'  shift 70
	'~'  shift 61
	'.'  shift 80
	.  error


state 112
	expr:  expr.'~' expr 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.EXP expr 
	expr:  expr EXP expr.    (52)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'%' expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	varexpr:  expr.'.' IDENT 
	varexpr:  expr.'[' expr ']' 

	'['  shift 81
	'.'  shift 80
	.  reduce 52 (src line 379)

